animated menu hamburgur button, adapted cohort edit page to variable edit page

--- a/blink_sass/components/_dropdown.sass
+++ b/blink_sass/components/_dropdown.sass
@@ -1,5 +1,10 @@
+*[aria-expanded="false"]
+    .fa-caret-down
+        display: none
+*[aria-expanded="true"]
+    .fa-caret-right
+        display: none
 .dropdown
-
     &.open > .dropdown-toggle.btn-primary
         background-color: $primary-color-dark
         border-color: $primary-color-dark
