--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -8,9 +8,11 @@
 {% block link_page_name %}dashboard{% endblock %}
 {% block page_name %}dashboard{% endblock %}
 
+{% block page_header %}
+    <h1 class="page-header">Your Dashboard</h1>
+{% endblock %}
 {% block content %}
 <div class="container">
-    <h1 class="page-header">Your Dashboard</h1>
 
     <section class="panel panel-default">
         <div class="panel-heading">
