--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -35,7 +35,10 @@
                         </div>
                     </div>
                     <div class="navbar-item">
-                        <a type="button" class="navbar-item__text" data-toggle="collapse" data-target="#subnav" aria-expanded="false" aria-controls="subnav"><i class="fa fa-bars"></i>Menu</a>
+                        <a type="button" class="navbar-item__text lines-button x collapsed" data-toggle="collapse" data-target="#subnav" aria-expanded="false" aria-controls="subnav">
+                            <span class="lines"></span>
+                            Menu
+                        </a>
                     </div>
                 {% else %}
                     <div id="user-login" class="navbar-form inline-block">
