--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -11,3 +11,66 @@
 
 .btn-link
   font-weight: $regular-font-weight
+
+
+$button-size : 2rem
+$transition: .3s
+
+.lines-button
+  display: inline-block
+  padding: $button-size/2 $button-size/4
+  transition: .3s
+  cursor: pointer
+  user-select: none
+  border-radius: $button-size/7
+
+  &.collapsed
+    .lines
+      @include line($button-size, $isb-primary)
+      position: relative
+      vertical-align: middle
+
+      &:before, &:after
+        @include line($button-size, $isb-primary)
+        left: 0
+        transform-origin: $button-size/14 center
+
+      &:before
+        top: $button-size/4
+        transform: rotate3d(0,0,1,0)
+
+      &:after
+        top: -$button-size/4
+        transform: rotate3d(0,0,1,0)
+
+    &:hover
+      opacity: 1
+      .lines
+        &:before
+          top: $button-size/3.5
+        &:after
+          top: -$button-size/3.5
+
+  .lines
+    @include line($button-size, transparent)
+    position: relative
+    vertical-align: middle
+    margin-top: -4px
+
+    &:before, &:after
+      @include line($button-size, $isb-primary)
+      position: absolute
+      content: ''
+      transform-origin: 50% 50%
+      top: 0
+      width: $button-size
+    &:before
+      transform: rotate3d(0,0,1,45deg)
+    &:after
+      transform: rotate3d(0,0,1,-45deg)
+
+  &:active
+    transition: 0
+    background: rgba(0,0,0,.1)
+
+
