--- a/blink_sass/components/_dropdown.sass
+++ b/blink_sass/components/_dropdown.sass
@@ -1,7 +1,7 @@
-*[aria-expanded="false"]
+*[data-toggle="collapse"][aria-expanded="false"]
     .fa-caret-down
         display: none
-*[aria-expanded="true"]
+*[data-toggle="collapse"][aria-expanded="true"]
     .fa-caret-right
         display: none
 .dropdown
