--- a/blink_sass/components/_listgroup.sass
+++ b/blink_sass/components/_listgroup.sass
@@ -19,3 +19,6 @@
         font-weight: $medium-font-weight
         &:hover, &:focus, &:active, &:visited
           text-decoration: none
+
+    &__body
+      padding-bottom: 10px
