--- a/templates/visualizations/plot.html
+++ b/templates/visualizations/plot.html
@@ -31,7 +31,7 @@
             <input class="form-control" id="{{ plot.id }}-plot-title" type="text" name="name" value="{% if plot.title %}{{ plot.title }}{% else %}Untitled Plot{% endif %}" />
         </div>
 
-        <h5>{{ plot.cohort_name }} ({{ plot.sample_length }} Samples, {{ plot.patient_length }} Patients)</h5>
+{#        <h5>{{ plot.cohort_name }} ({{ plot.sample_length }} Samples, {{ plot.patient_length }} Patients)</h5>#}
     </div>
     <div class="panel-body">
         <div class="plot-loader" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
