--- a/sass/users.sass
+++ b/sass/users.sass
@@ -83,6 +83,8 @@
             &:nth-child(2)
                 margin: 0px 15px
 
+        .gcp-panel .panel-body p a
+            display: inline-block
         a
             text-decoration: underline
             display: block
