--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -92,9 +92,8 @@
             <div class="panel-body">
                 {% if True %}
                     <p>
-                        Connect to a Google Cloud Project to start uploading your own datasets, setup your own virtual machines and run custom processing pipelines on TCGA data.
+                        <a href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/request-gcp" target="_blank">Request</a> a Google Cloud Project to start uploading your own datasets, setup your own virtual machines and run custom processing pipelines on TCGA data.
                     </p>
-{#                    <a href="#">Sign Up</a>#}
                 {% else %}
                     <p><i class="fa fa-check-circle"></i> Connected to Google Cloud Platform</p>
                     <hr>
