--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -73,13 +73,50 @@
                 </h5>
             </div>
             <div class="panel-body">
-                {% if NIH_AUTH_ON %}
-                    {% include 'GenespotRE/user_detail_saml.html' %}
-                    {% block saml_content %}
-                    {% endblock %}
-                {% else %}
-                    <p>NIH Authorization currently disabled.</p>
+                {% if not user_details.NIH_username or not user_details.NIH_active %} {# No eRA account, no dbGaP #}
+                    <p>
+                    Apply for dbGaP Authorized Access to access underlying Level 1 genomics data.
+                    </p>
+
+{# Removed for production #}
+{#                    {% if not user_details.NIH_username %}#}
+{#                        <a href="{% url 'saml_index' %}?sso">Associate with eRA Commons Account</a>#}
+{#                    {% else %}#}
+{#                        <a href="{% url 'saml_index' %}?sso">Log in with your eRA Commons Account {{ user_details.NIH_username }}</a>#}
+{#                        <a href="{% url 'unlink_accounts' %}">Unlink {{ user_details.email }} from the NIH username {{ user_details.NIH_username }}</a>#}
+{#                    {% endif %}#}
+{##}
+{#                    <a href="https://dbgap.ncbi.nlm.nih.gov/aa/wga.cgi?page=login" target="_blank">Learn More</a>#}
+
+                {% elif not user_details.dbGaP_authorized %} {# no dbGaP #}
+                    <p><i class="fa fa-check-circle"></i> eRA Account Authenticated</p>
+                    <hr>
+                    <p>Congratulations, {{ user_details.NIH_username }}! Your eRA account has been authenticated. Now we need to verify if you have dbGaP authorization. This process may take up to 24 hours.</p>
+
+                    <a href="#">How to Apply for dbGaP Access</a>
+                {% else %} {# Both authorized #}
+                    <p><i class="fa fa-check-circle"></i> dbGaP Access Authorized</p>
+                    <hr>
+                    <p>
+                        Congratulations, {{ user_details.NIH_username }}! You now have access to ISB-CGC controlled access TCGA data until
+                        {{ user_details.NIH_assertion_expiration|localtime }}
+                        {% if TIMEZONE != "" or TIMEZONE == None %}
+                            in {{ TIME_ZONE }} time.
+                        {% endif %}
+                    </p>
+
+                    <a href="#">How to Access Controlled-Access Data</a>
+                    <a href="#">Data Use Certification Agreement</a>
                 {% endif %}
+                {% if membership %}
+                    <hr>
+                    <p>
+                       You are a member of the group isb-cgc-cntl.
+                        <a data-toggle="modal" data-target="#bucket-contents-modal">View bucket contents</a>
+                    </p>
+                {% endif %}
+
+
             </div>
         </div>
 
@@ -92,8 +129,9 @@
             <div class="panel-body">
                 {% if True %}
                     <p>
-                        <a href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/request-gcp" target="_blank">Request</a> a Google Cloud Project to start uploading your own datasets, setup your own virtual machines and run custom processing pipelines on TCGA data.
+                        Connect to a Google Cloud Project to start uploading your own datasets, setup your own virtual machines and run custom processing pipelines on TCGA data.
                     </p>
+{#                    <a href="#">Sign Up</a>#}
                 {% else %}
                     <p><i class="fa fa-check-circle"></i> Connected to Google Cloud Platform</p>
                     <hr>
