--- a/templates/GenespotRE/user_landing.html
+++ b/templates/GenespotRE/user_landing.html
@@ -272,7 +272,7 @@
                                 <select name="operation" id="operation" class="form-control">
                                     <option value="union">Union</option>
                                     <option value="intersect">Intersection</option>
-                                    <option value="complement">Set Minus</option>
+                                    <option value="complement">Complement</option>
                                 </select>
                             </div>
                         </div>
