--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -8,24 +8,32 @@
 {% block link_page_name %}project_detail{% endblock %}
 {% block page_name %}project_detail{% endblock %}
 
+{% block page_header %}
+    <ol class="breadcrumb">
+        <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
+        <li><a href="{% url 'projects' %}">Projects</a></li>
+    </ol>
+    <h1 class="page-header">Lorem Ipsum Project</h1>
+    <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus placerat porttitor. Sed ac accumsan neque, dignissim blandit diam. </p>
+    <div class="panel-footer">
+        <div class="row">
+            <button class="btn btn-default">New Workbook</button>
+            <span class="separator"></span>
+            <button class="btn btn-primary"><i class="fa fa-upload"></i>Upload Data</button>
+            <button class="btn btn-primary">Edit Details</button>
+            <button class="btn btn-primary">Delete</button>
+            <button class="btn btn-primary">Share</button>
+            <button class="btn btn-link">Shared with (2)</button>
+        </div>
+    </div>
+{% endblock %}
 {% block content %}
     <div class="container">
-        <section class="project-header">
-            <h1 class="project-title">Lorem Ipsum Project</h1>
-            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus placerat porttitor. Sed ac accumsan neque, dignissim blandit diam. </p>
-            <div>
-                <button class="btn btn-primary">New Workbook</button>
-                <button class="btn btn-default"><i class="fa fa-upload"></i>Upload Data</button>
-                <button class="btn btn-default">Edit Details</button>
-                <button class="btn btn-default">Delete</button>
-                <button class="btn btn-default">Share</button>
-                <button class="btn btn-plain">Shared with (2)</button>
-            </div>
-        </section>
+
         {# % for study in studies % #}
         <section class="project-study panel panel-default">
             <div class="panel-heading">
-                <h5 class="panel-title">Lorem Ipsum Study</h5>
+                <h4 class="panel-title">Lorem Ipsum Study</h4>
             </div>
             <div class="panel-body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus placerat porttitor. Sed ac accumsan neque, dignissim blandit diam.</p>
@@ -37,4 +45,4 @@
     </div>
 {% endblock %}
 
-{% block js_file %}{% static 'dashboard.js' %}{% endblock %}
+{% block js_file %}{% static 'js/base.js' %}{% endblock %}
