--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -14,7 +14,7 @@
                      {% endif %}
 
                     <li class="navbar-link navbar-item"><a href="{% url 'about_page' %}">About</a></li>
-                    <li class="navbar-link navbar-item"><a href="{% url 'help_page' %}">Help</a></li>
+                    <li class="navbar-link navbar-item"><a href="{% url 'help' %}">Help</a></li>
                 </ul>
             </div>
 
