--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -48,7 +48,7 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li><a target="_blank" href="https://github.com/isb-cgc/ISB-CGC-Webapp">Code Repository</a></li>
-                    <li><a href="{% url 'help' %}">Documentation</a></li>
+                    <li><a href="{% url 'help_page' %}">Documentation</a></li>
 {#                    <li><a href="#">Policies and Guidelines</a></li>#}
                 </ul>
             </div>
