--- a/blink_sass/style.sass
+++ b/blink_sass/style.sass
@@ -13,8 +13,9 @@
 // Import basic settings
 // ----------------------------------
 @import reset
-@import mixins
 @import variables
+@import mixins
+@import animate
 @import typography
 
 // --------------------------------------------
