--- a/blink_sass/mixins.sass
+++ b/blink_sass/mixins.sass
@@ -41,3 +41,13 @@
     background: $color
     border-radius: $button-size/14
     transition: $transition
+
+@mixin keyframes($name)
+    @-webkit-keyframes #{$name}
+        @content
+    @-moz-keyframes #{$name}
+        @content
+    @-ms-keyframes #{$name}
+        @content
+    @keyframes #{$name}
+        @content
