--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -105,6 +105,9 @@ $btn-default-bg: transparent
 $btn-default-color:  $isb-warning
 $btn-default-border: $isb-warning
 
+$button-size : 2rem
+$transition: .3s
+
 // --------------------------------------------
 // Panel
 // --------------------------------------------
